src/scss/_components.scss
/* ... */
// Toast
.toast {
  top: $navbar-height;
  position: absolute;
  z-index: 12;
  left: 0;
  right: 0;
  max-width: 100%;
  margin: 10px auto 0;
  background: transparent;
  border: 0;
  box-shadow: none;
  padding: 0;
  text-align: center;
  font-family: $font-family-metropolis;
  font-weight: bold;
  @include h6;

  .toast-body {
    display: inline-block;
    background: #FFFFFF;
    border-radius: 50px;
    padding: 0.75rem 1.5rem;
  }

  @include media-breakpoint-down(sm) {
    top: $navbar-content-height / 2;
    margin-top: 0;
    transform: translateY(-50%);
  }
}

